# sound-rt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  config.h
engine/audio/: CMakeLists.txt  audio_manager.cc  audio_manager.h  emitter.cc  emitter.h  listener.cc  listener.h
engine/core/: CMakeLists.txt  app.cc  app.h  cvar.cc  cvar.h  debug.cc  debug.h  filesystem.h  idpool.h  math.h  maths.h  random.cc  random.h  util.h
engine/physics/: CMakeLists.txt  phy.cc  phy.h  physicsmesh.cc  physicsmesh.h  physicsresource.h  plane.cc  plane.h  ray.h  simplex.cc  simplex.h
engine/render/: CMakeLists.txt  cameramanager.cc  cameramanager.h  debug_camera.cc  debug_camera.h  debugrender.cc  debugrender.h  lightserver.cc  lightserver.h  lightsources.h  model.cc  model.h  particlesystem.cc  particlesystem.h  renderdevice.cc  renderdevice.h  resourceid.h  shaderresource.cc  shaderresource.h  textureresource.cc  textureresource.h  window.cc  window.h
engine/render/input/: gamepad.cc  gamepad.h  inputserver.cc  inputserver.h  key.cc  key.h  keyboard.h  mouse.h
exts/: CMakeLists.txt
exts/fx_gltf/: gltf.cpp
exts/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
exts/nlohmann_json/: json.cpp
exts/soloud/: AUTHORS
exts/soloud/contrib/: Configure.cmake  src.cmake
exts/soloud/include/: soloud.h
exts/soloud/src/core/: soloud.cpp
exts/stbi/: stbi.c
projects/: CMakeLists.txt
projects/audio-proj/: CMakeLists.txt
projects/audio-proj/code/: main.cc  spacegameapp.cc  spacegameapp.h
